Fix the config of HH-RLHF
Validation set is now on test, and test is None

--- a/config/dataset/hh.yaml
+++ b/config/dataset/hh.yaml
@@ -1,5 +1,4 @@
 name: "Anthropic/hh-rlhf"
-train: train[:90%]
-val: train[90%:]
-test: "test"
-score_ratio: 2.0
+train: train
+val: test
+test: null
