--- a/config/optimizer/lion.yaml
+++ b/config/optimizer/lion.yaml
@@ -1,5 +1,6 @@
 name: lion
-learning_rate: 1.0e-5
+learning_rate: 1.0e-4
 b1: 0.9
 b2: 0.99
-weight_decay: 1.0e-4
+weight_decay: 1.0e-3
+mu_dtype: bfloat16
