--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-transformers
+-f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+jax[cuda12_pip]>=0.4.19
 datasets
-jax[cuda11_cudnn82]>=0.4.2
-torch
+transformers
 optax
 flax
 hydra-core
